--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "dotenv": "^6.0.0",
     "koa": "^2.5.2",
     "koa-body": "^4.0.4",
+    "koa-hbs": "^1.0.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "koa-send": "^5.0.0",
+    "koa-static": "^5.0.0",
     "sharp": "^0.20.5",
     "tesseract.js": "^1.0.10",
     "uid2": "^0.0.3"
