--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dotenv": "^6.0.0",
     "koa": "^2.5.2",
     "koa-body": "^4.0.4",
-    "koa-hbs": "^1.0.0",
     "koa-logger": "^3.2.0",
+    "koa-mount": "^3.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "sharp": "^0.20.5",
