Add email notification

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ CAMERA_TZ_OFFSET=3
 IMAGE_DIR=./data
 DB_FILE=./database.db
 ADMIN_PASSWORD=foobar
+MAILGUN_API_KEY=key-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+MAILGUN_DOMAIN=example.com
+MAILGUN_FROM=My camera <info@example.com>
+MAILGUN_TO=user@examle.com,user2@example.com
