--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "mailgun-js": "^0.20.0",
     "sharp": "^0.20.5",
     "tesseract.js": "^1.0.10",
     "uid2": "^0.0.3"
