--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "date-fns": "^1.29.0",
-    "qs": "^6.5.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-image-lightbox": "^5.0.0",
-    "react-scripts": "1.1.4"
+    "date-fns": "^2.14.0",
+    "qs": "^6.9.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-image-lightbox": "^5.1.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
@@ -16,5 +16,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3000",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
