Update example env

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SERVER_PORT=3000
 URL_SECRET_KEY=foobar
 CAMERA_TZ_OFFSET=3
 IMAGE_DIR=./data
-DB_FILE=./database.db
+DB_FILE=./data/database.db
 ADMIN_PASSWORD=foobar
 MAILGUN_API_KEY=key-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 MAILGUN_DOMAIN=example.com
