--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "better-sqlite3": "^7.0.1",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "koa": "^2.12.0",
     "koa-body": "^4.1.3",
