--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
 node_modules
 
 # testing
@@ -11,11 +8,7 @@ node_modules
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.example
 
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
