Use GA npm module

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.0.0",
     "react-image-lightbox": "^5.1.1",
     "react-scripts": "3.4.1"
   },
