--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
+# Dummy values for development
+LOCALE=fi
 SERVER_PORT=3000
+SERVER_URL=https://example.com
 URL_SECRET_KEY=foobar
 CAMERA_TZ_OFFSET=3
-IMAGE_DIR=./data
-DB_FILE=./data/database.db
+IMAGE_DIR=../test-data
+DB_FILE=../test-data/database.db
 ADMIN_PASSWORD=foobar
 MAILGUN_API_KEY=key-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 MAILGUN_DOMAIN=example.com
 MAILGUN_FROM=My camera <info@example.com>
 MAILGUN_TO=user@examle.com,user2@example.com
+REACT_APP_GOOGLE_ANALYTICS_ID=UA-111111111-1
