--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start-dev": "PORT=3001 env-cmd -f ../.env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
