--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "repository": "https://github.com/ilkkao/trailmate",
   "author": "Ilkka Oksanen <iao@iki.fi>",
   "license": "Apache-2.0",
+  "scripts": {
+    "lint": "eslint server/*.js"
+  },
   "devDependencies": {
-    "eslint": "6",
+    "env-cmd": "^10.1.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5"
-  }
+  },
+  "dependencies": {}
 }
