--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,15 @@
   "repository": "https://github.com/ilkkao/trailmate",
   "author": "Ilkka Oksanen <iao@iki.fi>",
   "license": "Apache-2.0",
+  "scripts": {
+    "start-dev": "env-cmd -f ../.env node server.js",
+    "test": "NODE_ENV=test env-cmd -f ../.env mocha --recursive"
+  },
   "dependencies": {
     "better-sqlite3": "^7.0.1",
     "cron": "^1.8.2",
-    "dotenv": "^8.2.0",
+    "i18next": "^19.4.5",
+    "i18next-fs-backend": "^1.0.6",
     "koa": "^2.12.0",
     "koa-body": "^4.1.3",
     "koa-logger": "^3.2.1",
@@ -19,5 +24,11 @@
     "smtp-server": "^3.6.0",
     "tesseract.js": "^2.1.1",
     "uid2": "^0.0.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0"
   }
 }
