--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint server/*.js"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
-    "eslint": "^7.2.0",
+    "eslint": "6",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
