Add english locale

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Dummy values for development
-LOCALE=fi
+SERVER_LOCALE=en-us
+REACT_APP_LOCALE=en-us
 SERVER_PORT=3001
 SERVER_URL=https://example.com
 URL_SECRET_KEY=foobar
