Fix environment variables

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# Dummy values for development
-SERVER_LOCALE=en-us
-REACT_APP_LOCALE=en-us
+# Default configuration
+LOCALE=en-us
 SERVER_PORT=3001
 SERVER_URL=https://example.com
 URL_SECRET_KEY=foobar
@@ -12,4 +11,5 @@ MAILGUN_API_KEY=key-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 MAILGUN_DOMAIN=example.com
 MAILGUN_FROM=My camera <info@example.com>
 MAILGUN_TO=user@examle.com,user2@example.com
-REACT_APP_GOOGLE_ANALYTICS_ID=UA-111111111-1
+GOOGLE_ANALYTICS_ID=UA-111111111-1
+VERBOSE=false
