--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Default configuration
 LOCALE=en-us
 SERVER_PORT=3001
-SERVER_URL=https://example.com
+SERVER_URL=http://example.com
 URL_SECRET_KEY=foobar
 CAMERA_TZ_OFFSET=3
 IMAGE_DIR=../test-data
