--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/ilkkao/trailmate",
   "author": "Ilkka Oksanen <iao@iki.fi>",
   "license": "Apache-2.0",
+  "private": true,
   "scripts": {
     "lint": "eslint server/*.js",
     "test": "yarn lint && cd server && yarn test"
