--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Default configuration
 LOCALE=en-us
-SERVER_PORT=3001
-SERVER_URL=http://example.com
+HTTP_SERVER_PORT=3001
+HTTP_SERVER_URL=http://example.com
+SMTP_SERVER_PORT=465
 URL_SECRET_KEY=foobar
 CAMERA_TZ_OFFSET=3
 IMAGE_DIR=../test-data
