Enable secret email config

--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ LOCALE=en-us
 HTTP_SERVER_PORT=3001
 HTTP_SERVER_URL=http://example.com
 SMTP_SERVER_PORT=465
-URL_SECRET_KEY=foobar
+SECRET_URL_KEY=foobar
+SECRET_EMAIL_ADDRESS=barfoo@example.com
 CAMERA_TZ_OFFSET=3
 IMAGE_DIR=../test-data
 DB_FILE=../test-data/database.db
