--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ HTTP_SERVER_URL=http://example.com
 SMTP_SERVER_PORT=465
 SECRET_EMAIL_ADDRESS=barfoo@example.com
 CAMERA_TZ_OFFSET=3
-IMAGE_DIR=../test-data
+IMAGE_DIR=../test-data/images
 DB_FILE=../test-data/database.db
 ADMIN_PASSWORD=foobar
 MAILGUN_API_KEY=key-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
