--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "version": "0.1.0",
   "dependencies": {
     "date-fns": "^2.14.0",
-    "i18next": "^19.5.4",
+    "i18next": "^19.5.5",
     "mousetrap": "^1.6.5",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-ga": "^3.1.1",
+    "react-ga": "^3.1.2",
     "react-i18next": "^11.7.0",
     "react-image-lightbox": "^5.1.1",
     "react-scripts": "3.4.1"
